# daily

./: README.md  pyproject.toml
daily/: run.py  ui.py  visuales.py
daiyly/: checklists.toml  listmanager.py  opciones.toml  router.py  ui.py  visuales.py
doc/: c4comp_story1.html  features.md  mermaid-history-2023-05-15-004453.json  mermaid-history-2023-05-22-124858.json  mvp.adoc  userh
doc/.asciidoctor/diagram/: nombre.png.cache
doc/story1/: c4comp_story1.adoc
features/: listmanager.feature
features/steps/: listmanager_steps.py
tests/: test_list.py
