[tool.poetry]
name = "daiyly"
version = "0.1.0"
description = ""
authors = ["ven <alessandrovmkt@gmail.com>"]
readme = "README.md"

[tool.poetry.group.test]

[tool.poetry.group.test.dependencies]
behave = "1.2.6"
pytest = "7.3.1"

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
